--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,11 @@
 
+html {
+ box-sizing: border-box;
+}
+*, *:before, *:after {
+ box-sizing: inherit;
+}
+
 body {
  font-family: "Alef", sans-serif;
 }
