create route kanban

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,3 +18,11 @@ p {
 a {
  text-decoration: none;
 }
+
+.board {
+ position: relative;
+ min-width: 1200px;
+ &-column-content {
+  height: 70vh !important;
+ }
+}
